--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <input type="number" placeholder="Digite os pontos de vida temporários" name="pv-temp" required>
 
                     <label class="file-upload">
-                        <span>Escolher Token</span>
+                        <span>Escolher Token <i class="fa-solid fa-upload"></i></span>
                         <input type="file" id="token" name="token" accept="image/png, image/jpeg, image/jpg" />
                     </label>
                     <span id="file-name">Nenhum arquivo escolhido</span>
