--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
 
             <!-- PERSONAGENS PADRAO -->
-            <div class="character animate__animated animate__fadeInUpBig animate__slow">
+            <div class="character animate__animated animate__zoomIn animate__slow">
                 <div class="character-top">
                     <img src="assets/token-elezara.jpeg" alt="Token da Elezara">
                     <div class="name-and-pv">
@@ -127,7 +127,7 @@
                 </div>
             </div>
 
-            <div class="character animate__animated animate__fadeInUpBig animate__slow">
+            <div class="character animate__animated animate__zoomIn animate__slow">
                 <div class="character-top">
                     <img src="assets/token-powder.jpeg" alt="Token da Powder">
                     <div class="name-and-pv">
@@ -147,7 +147,7 @@
                 </div>
             </div>
 
-            <div class="character animate__animated animate__fadeInUpBig animate__slow">
+            <div class="character animate__animated animate__zoomIn animate__slow">
                 <div class="character-top">
                     <img src="assets/token-bellarosh.jpeg" alt="Token da Bellarosh">
                     <div class="name-and-pv">
