--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Permanent+Marker&display=swap"
         rel="stylesheet">
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
@@ -23,11 +24,11 @@
     <div class="main-layout">
         <section class="header">
             <img src="assets/logo.avif" alt="Logo da Campanha a Mina Perdida de Phandelver"
-                class="animate__animated animate__zoomIn animate__slow">
+                class="animate__animated animate__fadeIn animate__slow">
             <h1 class="animate__animated animate__jackInTheBox animate__slow">Sistema de Combate</h1>
-            <button class="animate__animated animate__zoomIn animate__slow open-button" onclick="openForm()"><i
+            <button class="animate__animated animate__fadeIn animate__slow open-button" onclick="openForm()"><i
                     class="fa-solid fa-plus"></i> Personagem</button>
-            <button class="animate__animated animate__zoomIn animate__slow delete-button"><i
+            <button class="animate__animated animate__fadeIn animate__slow delete-button"><i
                     class="fa-solid fa-minus"></i> Personagem</button>
 
             <!-- POPUP CRIAR PERSONAGEM -->
@@ -107,7 +108,7 @@
             </div>
 
             <!-- PERSONAGENS PADRAO -->
-            <div class="character animate__animated animate__zoomIn animate__slow">
+            <div class="character animate__animated animate__fadeIn animate__slow">
                 <div class="character-top">
                     <img src="assets/token-elezara.jpeg" alt="Token da Elezara">
                     <div class="name-and-pv">
@@ -127,7 +128,7 @@
                 </div>
             </div>
 
-            <div class="character animate__animated animate__zoomIn animate__slow">
+            <div class="character animate__animated animate__fadeIn animate__slow">
                 <div class="character-top">
                     <img src="assets/token-powder.jpeg" alt="Token da Powder">
                     <div class="name-and-pv">
@@ -147,7 +148,7 @@
                 </div>
             </div>
 
-            <div class="character animate__animated animate__zoomIn animate__slow">
+            <div class="character animate__animated animate__fadeIn animate__slow">
                 <div class="character-top">
                     <img src="assets/token-bellarosh.jpeg" alt="Token da Bellarosh">
                     <div class="name-and-pv">
