--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     class="fa-solid fa-plus"></i> Personagem</button>
             <button class="animate__animated animate__fadeIn animate__slow delete-button"><i
                     class="fa-solid fa-minus"></i> Personagem</button>
+            <h2>Arraste os personagens para trocar a ordem</h1>
 
             <!-- POPUP CRIAR PERSONAGEM -->
             <div class="form-popup" id="createForm">
