--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
 
                     <label for="fromCurrency"><b>De:</b></label>
                     <select id="fromCurrency" name="fromCurrency">
-                        <option value="pp">Platina (pl)</option>
-                        <option value="gp">Ouro (po)</option>
-                        <option value="ep">Electrum (pe)</option>
-                        <option value="sp">Prata (pp)</option>
-                        <option value="cp">Cobre (pc)</option>
+                        <option value="pl">Platina (pl)</option>
+                        <option value="po">Ouro (po)</option>
+                        <option value="pe">Electrum (pe)</option>
+                        <option value="pp">Prata (pp)</option>
+                        <option value="pc">Cobre (pc)</option>
                     </select>
 
                     <label for="toCurrency"><b>Para:</b></label>
                     <select id="toCurrency" name="toCurrency">
-                        <option value="pp">Platina (pl)</option>
-                        <option value="gp">Ouro (po)</option>
-                        <option value="ep">Electrum (pe)</option>
-                        <option value="sp">Prata (pp)</option>
-                        <option value="cp">Cobre (pc)</option>
+                        <option value="pl">Platina (pl)</option>
+                        <option value="po">Ouro (po)</option>
+                        <option value="pe">Electrum (pe)</option>
+                        <option value="pp">Prata (pp)</option>
+                        <option value="pc">Cobre (pc)</option>
                     </select>
 
                     <button type="button" class="btn" onclick="convertCurrency()">Converter</button>
